# figma-visual-understanding

./: .gitignore  AGENTS.md  README.md  config.yaml  icon_matching.yaml  pipeline_config.yaml  pyproject.toml  query_gen_config.yaml  requirements.txt
annotation/: annotate_generated_queries_ui.py  annotate_visual_query_ui.py  visual_query_annotations.jsonl
assets/icon_library/templates/: templates.json
docs/: candidate-query-generation.md  icon-candidate-generation.md  icon-library-and-matching.md  icon-matching-evaluation.md  ocr-baseline.md  query-generation-evaluation.md  unified-visual-pipeline.md  visual-query-annotation.md  vlm-input-modes.md
notebooks/: inspect_icon_matching_results.ipynb
scripts/: build_icon_library.py  candidate_query_example.py  evaluate_icon_matching.py  generate_icon_candidate_evaluation_set.py  generate_icon_candidates.py  generate_query_generation_evaluation_set.py  match_icon_example.py  run_ocr_example.py  run_pipeline_example.py
src/candidate_queries/: __init__.py  base.py  config.py  context.py  factory.py  gemini.py  models.py
src/icon_matching/: __init__.py  normalization.py  template_library.py
src/icon_matching/candidate_generation/: __init__.py  base.py  config.py  detectors.py  models.py  ordering.py  ordering_factory.py  output.py  pipeline.py
src/icon_matching/matching/: __init__.py  base.py  chamfer.py  detection.py  evaluation.py  (+4 more)
src/ocr/: __init__.py  base.py  engine.py  factory.py  filtering.py  models.py  serialization.py
src/visual_pipeline/: __init__.py  config.py  input_modes.py  models.py  pipeline.py
